test/classes/bradc/paramInClass/weirdParamInit3.good
weirdParamInit3.chpl:6: error: unresolved call 'C()'
weirdParamInit3.chpl:1: note: candidates are: C(param x: int)
